# soft2026

./: Versão simplificada.prj  análise.txt  perspectiva do desenvolvedor.prj  perspectiva do usuário.prj  readme.md
Banco/: DxfLeica.cpp  DxfLeica.h  geral.cpp  geral.h
Banco/ed/: glista.h  gno.h
Banco/forms/: comserial.cpp  comserial.h  comserial.ui  serial.cpp  serial.h  serial.ui
Banco/tipos/: aresta.cpp  aresta.h  ecivil.cpp  ecivil.h  face.cpp  face.h  ponto.cpp  ponto.h
Banco1/: dxf.cpp  dxf.h  edsup.cpp  edsup.h  geral.cpp  geral.h  superficie.cpp  superficie.h
Banco1/Tipos/: aresta.cpp  aresta.h  face.cpp  face.h  ponto.cpp  ponto.h
Banco1/ed/: glista.h  gno.h
Banco2/: tipos.cpp  tipos.h
CSerial/: CMakeLists.txt  main.cpp  serial.cpp  serial.h  serial.ui
Inst/: LEV_20260111_003409.gsi  LEV_20260111_003550.gsi  LEV_20260111_004048.gsi  LEV_20260111_054534.gsi  LEV_20260111_123354.bru  apaga.ars  apaga.pnt  daLeica.dxf  daLeica1.dxf  fazerTraçado.dxf  outro.dxf  outro.pnt  sede.ars  sede.pnt  sede.sup
Leica0701/: CMakeLists.txt  leica.cpp  leica.h  leica.ui  main.cpp
QCivil/: CMakeLists.txt  civil.cpp  civil.h  civil.ui  main.cpp
RevisaPartes/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SCom/: CMakeLists.txt  main.cpp  serial.cpp  serial.h  serial.ui
Simples/: CMakeLists.txt  main.cpp  scivil.cpp  scivil.h  scivil.ui
Superficie/: CMakeLists.txt  main.cpp  super.cpp  super.h  super.ui
aprender/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
do outro/: Guia.md
do outro/Banco2/: tipos.cpp
do outro/revisao/: CMakeLists.txt  main.cpp  revjaneiro.cpp  revjaneiro.h  revjaneiro.ui
lisp/: arquivo.LSP  arquivo._LS  civil._ls  civil.lsp  desenho.LSP  io_desenho.LSP  io_desenho._LS  texto.LSP  tmp.lsp
mdComSerial/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
mdLerPntLeica/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
revisa/: CMakeLists.txt  main.cpp
tstdxf/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
